--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "@coreui/react": "^4.11.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
+    "fontawesome": "^5.6.3",
+    "fortawesome": "^0.0.1-security",
     "react": "^18.2.0",
     "react-bootstrap": "^2.10.0",
     "react-dom": "^18.2.0",
