--- a/package.json
+++ b/package.json
@@ -11,6 +11,10 @@
   },
   "dependencies": {
     "@coreui/react": "^4.11.1",
+    "@fortawesome/fontawesome-svg-core": "^6.5.1",
+    "@fortawesome/free-solid-svg-icons": "^6.5.1",
+    "@fortawesome/react-fontawesome": "^0.2.0",
+    "@types/react-transition-group": "^4.4.10",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "fontawesome": "^5.6.3",
