--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
     "@fortawesome/free-solid-svg-icons": "^6.5.1",
     "@fortawesome/react-fontawesome": "^0.2.0",
+    "@mui/icons-material": "^5.15.9",
     "@reduxjs/toolkit": "^2.1.0",
     "@types/react-transition-group": "^4.4.10",
     "axios": "^1.6.7",
