--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-router-dom": "^6.22.0",
+    "react-simple-star-rating": "^5.1.7",
     "react-slick": "^0.30.1",
     "react-slideshow-image": "^4.3.0",
     "semantic-ui-css": "^2.5.0",
