--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@mui/material": "^5.15.10",
     "@reduxjs/toolkit": "^2.1.0",
     "@types/react-transition-group": "^4.4.10",
+    "animate.css": "^4.1.1",
     "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "fontawesome": "^5.6.3",
